welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: ';' expected but 'else' found.
  }else if(litMessage()=='A'){
   ^BDRBuggle:35: error: Unmatched closing brace '}' ignored here
	}
        ^